###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "ochat",
    version = "0.1.0",
)

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "cpp-httplib", version = "0.16.3.bzl.1")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "boost.json", version = "1.83.0")
bazel_dep(name = "boost.asio", version = "1.83.0")
